--- a/package.json
+++ b/package.json
@@ -11,5 +11,6 @@
     "react-native",
     "react native",
     "ios"
-  ]
+  ],
+  "homepage": "https://github.com/kzyman/react-native-tx-education"
 }
