--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "react-native-tx-education",
-  "version": "1.0.2",
-  "description": "腾讯白板, IM通讯",
+  "name": "react-native-tencent-im",
+  "version": "1.0.0",
+  "description": "IM通讯",
   "author": "kzy",
   "license": "MIT",
   "source": "src/index",
@@ -12,5 +12,5 @@
     "react native",
     "ios"
   ],
-  "homepage": "https://github.com/kzyman/react-native-tx-education"
+  "homepage": "https://github.com/kzyman/react-native-tencent-im"
 }
